syntax = "proto3";

package user;

option go_package = "user-management/proto/user;user";


service UserService {
  rpc GetAllUsers(Empty) returns (UserListResponse);
  rpc CreateUser(CreateUserRequest) returns (GenericResponse);
  rpc UpdateUser(UpdateUserRequest) returns (GenericResponse);
  rpc DeleteUser(DeleteUserRequest) returns (GenericResponse);
}

message Empty {}

message CreateUserRequest {
  string role_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message UserData {
  string id = 1;
  string role_id = 2;
  string role_name = 3;
  string name = 4;
  string email = 5;
  string last_access = 6;
}

message UserListResponse {
  bool status = 1;
  string message = 2;
  repeated UserData data = 3;
}

message GenericResponse {
  bool status = 1;
  string message = 2;
}
